# python-crud

./: .pre-commit-config.yaml  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml
components/: data_display.py  data_entry.py  utils.py
database/: db_manager.py  schema.py  schemas.toml  schemas.yaml
docs/: index.md
